# skipperbot-platform

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  agent.py  agent_loop.py  artifact_store.py  auto_memory.py  backup_runner.py  chat.py  chat_digest.py  chat_domain.py  chat_render.py  chatlog_channels.py  chatlog_store.py  config.py  connections.py  discord_bot.py  discord_config.py  doc_store.py  docker-compose.yml  domain_document.py  domain_evolve.py  domain_memory.py  domain_modules.py  email_runner.py  fcm_sender.py  folder_intelligence.py  folder_store.py  gdrive_backup.py  gmail_client.py  image_link_registry.py  issue_store.py  (+54 more)
.claude/: settings.json
app_platform/: __init__.py  activity.py  attention.py  auth.py  backups.py  behaviors.py  capabilities.py  config.py  consciousness.py  context.py  db.py  documents.py  entities.py  events.py  folders.py  images.py  jobs.py  lifecycle.py  links.py  loader.py  location.py  log_redaction.py  manifest.py  memory.py  migrator.py  notifications.py  prioritize.py  prompt_context.py  ratelimit.py  reminders.py  schedules.py  secrets.py  settings.py  skills.py  summarizer.py  time.py  timeline.py
apps/: README.md
data_layer/: __init__.py  artifacts.py  auto.py  backups.py  behaviors.py  brainstorming.py  calendar.py  chatlogs.py  config.py  db.py  documents.py  dsn.py  email.py  entity_types.py  evolution.py  folders.py  homeopathy.py  images.py  issues.py  item_history.py  job_queue.py  jobs.py  knowledge.py  links.py  lists.py  locator.py  memories.py  memory_queue.py  mobile_devices.py  notifications.py  prioritize.py  recipes.py  reminders.py  schedules.py  scrum.py  service_tokens.py  skipper_state.py  thinking_domains.py  thinking_log.py  timeline.py  (+2 more)
deploy/: Caddyfile.example  entrypoint.sh  skipperbot-agent.service.example  skipperbot-deploy-watcher.service  skipperbot-deploy-watcher.service.example
docs/: 00-pi-hardware-and-setup.md  01-base-platform-setup.md  02-adding-apps.md  03-extended-functionality.md  04-running-as-a-service.md  BUILDING_APPS.md  app-help-authoring.md  app-visibility.md  architecture.md  backups-setup.md  customizing.md  discord-setup.md  faq.md  printing.md
migrations/: 000_baseline.sql  001_consciousness_log.sql  002_alarms_cleanup.sql  002_memories_created_at_id_index.sql  README.md
prompts/: BEHAVIOR.md  DISCORD.md  DOCUMENT_THINK.md  EVOLVE_THINK.md  KNOWLEDGE.md  MEMORY.md  SOUL.md
providers/: base.py  compat.py  model_config.py  openai_compat.py  openai_provider.py  registry.py  tier_resolver.py
scripts/: backfill_consciousness_log.py  bootstrap_db.py  box2_acceptance.py  logo.txt  (+52 more)
(+1724 files in other folders)
